jvm 方法